--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
           password: ${{secrets.DOCKERHUB_PASSWORD}}
           
       - name: "Docker image build"
-        uses: docker/build-push-action@5.1.0
+        uses: docker/build-push-action@v5.1.0
         with:
           context: ./src
           file: ./src/Dockerfile
           push: true
           tags: |
-            kadymo/kube-news:v1
+            kadymo/kube-news:${{github.run_number}}
             kadymo/kube-news:latest
