--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,16 @@ jobs:
           tags: |
             kadymo/kube-news:${{github.run_number}}
             kadymo/kube-news:latest
+  CD:
+    runs-on: ubuntu-latest
+    needs: [CI]
+    
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setting context
+        uses: Azure/k8s-set-context@v3.0
+        with:
+          method: kubeconfig
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+      
