--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,10 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{secrets.K8S_CONFIG}}
-      
+
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v4.9
+        with:
+          images: kadymo/kube-news:${{github.run_number}}
+          manifests: |
+            ./k8s/deployment.yml
