--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,4 @@ jobs:
         with:
           images: kadymo/kube-news:${{github.run_number}}
           manifests: |
-            /k8s/deployment.yaml
+            ./k8s/deployment.yaml
